--- a/HTML/02TagsAndElement.html
+++ b/HTML/02TagsAndElement.html
@@ -18,7 +18,25 @@
     <!--Alternatively you can use <div Style="text-align:center"-->
     <h2>Tags</h2>
     <p>Which comes in between &lt;Angular Brackets&gt;</p>
-    <!--hear we used &lt; which gives less than symbol and &gst; gives greater than symbol open and close-->
+    <!--hear we used &lt; which gives less than symbol and &gt; gives greater than symbol open and close-->
+
+    <p>eg. => h1, p, title etc</p>
+    <p>2. Self Closing tags / Void tag / Empty Tags</p>
+    <p>eg. => hr, br input etc</p>
+
+    <hr>
+    <!-- hr => It divides two elements and make a line between them (horizontal rule) -->
+
+    <h2>Element</h2>
+    <p><b>Element =></b>Start Tag - Some Content - End Tag</p>
+
+    <hr>
+
+    <h2>Attribute</h2>
+    <p><b>Attribute => </b> It provide Additional information, after that behaviour of Element will change</p>
+    <p><b> Always Written in Start Tag</b> </p>
+
+   
 
 
 </body>
