--- a/HTML/04BasicTags.html
+++ b/HTML/04BasicTags.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- <body dir="rtl"> -->
-        <marquee behavior="" direction="">Red and White Multimedia Education </marquee>
+        <marquee behavior="" direction="">Devloped By Piyush Tripathi Enjoy </marquee>
 
         <hr>
     
@@ -30,6 +30,29 @@ Eample for testing purpose using br tag <br>
 <!-- br => Line break i.e content after br tag will display in next line  -->
 <hr />
 
+<hr />
+<pre>
+
+    This              is an Example 
+                         This      is an Example 
+             This is           an Example 
+    This is an              Example 
+    This        is          an         Example <br>
+
+    never do this.
+</pre>
+
+<!-- Html never count more than one space  -->
+<abbr title="Piyush Tripathi">Developer</abbr>
+
+<blockquote>The first responsive design comes in meta viewport tag it is essential for responsive web design as it typically explains adaptive screen size for various devices and browsers. First line in head section. Eg. < meta name = "viewport"  content = "width = device-width , initial-scale = 1.0  "></blockquote>
+<!--Block quote keeps margin on both side evenly-->
+
+<hr>
+<abbr title="HyperText Markup Language">HTML</abbr>
+<!-- title Attribute is used to show some content when we hover on element  -->
+
+<hr>
 
 
         
