--- a/INTERVIEW/02Day2.html
+++ b/INTERVIEW/02Day2.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Interview02</title>
 </head>
+
 <body>
-    
+    <h1>Interview02</h1>
+    <h2>1.How many headings are there?</h2>
+    <p><i>There are 6 levels of headings in HTML from h1 to h6, where h1 is the highest most important and h6 is the
+            lowest or least important can be used multiple times.</i></p>
+    <hr>
+    <h2>2.H1 can be used how many times?</h2>
+    <p><i>h1 tag can be used many times as needed within an html document, however it is recommended to be used only
+            once per page to represent main heading of the document, for better SEC and accessibility practice all
+            subsequent headings to be from h2 to h6.</i></p>
+
+    <hr>
+    <h2>3. What is self-closing tag, empty tag, and void tag?</h2>
+    <p><i>Self-Closing, empty or Void Tag: A Tag that does not have a closing tag, they do not have any content. Images
+            and links cannot have content - they are pointers to an element installed on the website example are break
+            br tag, img or image tag, or hr, link etc.
+        </i></p>
+    <hr>
+    <h2>4.Why do we use &lt br &gt tag?</h2>
+    <p><i>br tag is used to insert line break in the text offen used for text formatting to start new line without
+            starting a new paragraph.</i></p>
+    <hr>
+    <h2>5.Why do we use &lt; hr &gt; tag?</h2>
+    <p><i>hr tag is used to create a horizontal rule or line across the page. It is used to visually separate sections
+            of content.</i></p>
+    <hr>
+    <h2>6.What is &lt;marquee&gt; tag?</h2>
+    <p><i>The marquee tag creates a scrolling text or image on a webpage. Now obsolete or is not recommended, presently
+            CSS animations and JavaScript are instead used for creating scrolling effect. </i></p>
+    <hr>
+    <h2>7.Difference between block-level and inline element?</h2>
+    <p><i>Block level Element takes full width available 100% of the parent container, like div, h1, p, etc. where else,
+            inline element takes only as much width as necessary it does not start on a new line. Example lebel, span
+            etc. </i></p>
+    <hr>
+    <h2>8.Div and span tag difference?</h2>
+    <p><i>Div tag is block level element and span tag is inline element. Say you want to highlight one word in the text
+            in line and you want to highlight the entire text so to highlight only one work inline element is used. </i>
+    </p>
+
+
+
+
+
+
 </body>
+
 </html>
