--- a/PRACTICE/02Practice.html
+++ b/PRACTICE/02Practice.html
@@ -13,14 +13,17 @@
     <h2>Lets Reflect What Is Known</h2>
     <p>I Just Wanted to Show how by using &lt; span &gt; The <span><b><i>"Highlight"</i></b></span> using inline element
         for reference</p>
+    <p>Cant make out inspect and see have created span break over Highlight</p>
     by uing &lt; br &gt; tag lets try and break line after line pur &lt; br &gt; press enter<br>
     line break comes
     <hr>
-    <p>how lets create hover text over over "Highlight" and you see Creation of Piyush Tripathi</p>
+    <p>Now lets create hover text over over "Highlight" and you see Creation of Piyush Tripathi</p>
     <p>We use &lt;abbr after which title= comes, where we type: “Creation of Piyush Tripathi”&gt; HIGHLIGHT &lt;/abbr
         &gt;as you hover over text then you type the text you want to display here we write HIGHLIGHT which will be
         displayed.</p>
-    <p><abbr title="Creation Of Piyush Tripathi">HIGHLIGHT</abbr></p>
+    <div Style="text-align:center">
+        <p><abbr title="Creation Of Piyush Tripathi">HIGHLIGHT</abbr></p>
+    </div>
 
     <hr>
     <div Style="text-align:center">
