--- a/TASK/05TaskofTheDayPlanets.html
+++ b/TASK/05TaskofTheDayPlanets.html
@@ -18,8 +18,8 @@
     <area target="_blank" alt=" Venus" title=" Venus" href="https://en.wikipedia.org/wiki/Venus" coords="301,541,27" shape="circle">
     <area target="_blank" alt="Earth" title="Earth" href="https://en.wikipedia.org/wiki/Earth" coords="354,539,25" shape="circle">
     <area target="_blank" alt="Mars" title="Mars" href="https://en.wikipedia.org/wiki/Mars" coords="410,541,19" shape="circle">
-    <area target="" alt="Asteroid Belt" title="Asteroid Belt" href="https://en.wikipedia.org/wiki/Asteroid_belt" coords="493,558,64" shape="circle">
-    <area target="" alt="Jupiter" title="Jupiter" href="https://en.wikipedia.org/wiki/Jupiter" coords="676,539,103" shape="circle">
+    <area target="_blank" alt="Asteroid Belt" title="Asteroid Belt" href="https://en.wikipedia.org/wiki/Asteroid_belt" coords="493,558,64" shape="circle">
+    <area target="_blank" alt="Jupiter" title="Jupiter" href="https://en.wikipedia.org/wiki/Jupiter" coords="676,539,103" shape="circle">
     <area target="_blank" alt="Saturn" title="Saturn" href="https://en.wikipedia.org/wiki/Saturn" coords="937,536,111" shape="circle">
     <area target="_blank" alt="Uranus" title="Uranus" href="https://en.wikipedia.org/wiki/Uranus" coords="1151,541,45" shape="circle">
     <area target="_blank" alt="Neptune" title="Neptune" href="https://en.wikipedia.org/wiki/Neptune" coords="1287,543,45" shape="circle">
