--- a/HTML/11ImageMap.html
+++ b/HTML/11ImageMap.html
@@ -17,7 +17,7 @@
     <img src="../image/LOGO.jpg" usemap="#image-map">
 
     <map name="image-map">
-        <area target="_blank" alt="LOGO" title="LOGO" href="https://www.hse-rm.com" coords="490,165,78,2" shape="rect">
+        <area target="_blank" alt="LOGO of HSE-RM SOLUTIONS" title="LOGO of HSE-RM SOLUTIONS" href="https://www.hse-rm.com" coords="490,165,78,2" shape="rect">
     </map>
     <h2> With link</h2>
 </body>
