--- a/HTML/12Table.html
+++ b/HTML/12Table.html
@@ -104,6 +104,9 @@
                 <table border="1">
                     <tr>
                         <td>Inner Table Data</td>
+                        <td> Text multiple</td>
+                        <td>test</td>
+                        <td>test</td>
                     </tr>
                 </table>
             </td>
@@ -149,6 +152,92 @@
             </tr>
         </table>    
 <hr>
+
+<h1>Attributes Practice</h1>
+<table border="1">
+    <caption>Table Caption or Table Name</caption>
+    <tr>
+        <th>Header 1</th>
+        <th>Header 2</th>
+        <th>Header 3</th>
+    </tr>
+    <tr>
+        <td>Data 1</td>
+        <td>Data 2</td>
+        <td>Data 3</td>
+    </tr>
+</table>
+<h2>cellpadding</h2>
+
+<table border="1" cellpadding="10">
+    <caption>Table Caption or Table Name</caption>
+    <tr>
+        <th>Header 1</th>
+        <th>Header 2</th>
+        <th>Header 3</th>
+    </tr>
+    <tr>
+        <td>Data 1</td>
+        <td>Data 2</td>
+        <td>Data 3</td>
+    </tr>
+</table>
+<h2>CellSpacing</h2>
+<table border="1" cellspacing="5">
+    <caption>Table Caption or Table Name</caption>
+    <tr>
+        <th>Header 1</th>
+        <th>Header 2</th>
+        <th>Header 3</th>
+    </tr>
+    <tr>
+        <td>Data 1</td>
+        <td>Data 2</td>
+        <td>Data 3</td>
+    </tr>
+</table>
+<h2>Table Width</h2>
+<table border="1" width="80%">
+    <caption>Table Caption or Table Name</caption>
+    <tr>
+        <th>Header 1</th>
+        <th>Header 2</th>
+        <th>Header 3</th>
+    </tr>
+    <tr>
+        <td>Data 1</td>
+        <td>Data 2</td>
+        <td>Data 3</td>
+    </tr>
+</table>
+<h2>Table Center Align</h2>
+<table border="1" align="center">
+    <caption>Table Caption or Table Name</caption>
+    <tr>
+        <th>Header 1</th>
+        <th>Header 2</th>
+        <th>Header 3</th>
+    </tr>
+    <tr>
+        <td>Data 1</td>
+        <td>Data 2</td>
+        <td>Data 3</td>
+    </tr>
+</table>
+
+<table border="1" bgcolor="#f0f0f0">
+    <caption>Table Caption or Table Name</caption>
+    <tr>
+        <th>Header 1</th>
+        <th>Header 2</th>
+        <th>Header 3</th>
+    </tr>
+    <tr>
+        <td>Data 1</td>
+        <td>Data 2</td>
+        <td>Data 3</td>
+    </tr>
+</table>
 
 
 </body>
