--- a/PRACTICE/06WEBPROJECT.HTML
+++ b/PRACTICE/06WEBPROJECT.HTML
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebProject</title>
 </head>
-<body>
-            <div style="text-align: center">;<h3>Welcome To My Page</h3></div>
-<img src="../image/MyPage.JPG" alt="This is Solar System" width="100%">
 
-<table border="1" width="50%">
-<tr>
-    <th><a href="https://hse-rm.com/index.html" target="_blank">HOME</a></th>
-    <th><a href="https://hse-rm.com/about.html" target="_blank">About Us</a></th>
-    <th><a href="https://hse-rm.com/services.html" target="_blank">Services</a></th>
-    <th><a href="https://hse-rm.com/products.html" target="_blank">Innovation</a></th>
-    <th><a href="https://hse-rm.com/contact.html" target="_blank">Contact Us</a></th>
-</tr>
-</table>
-<hr>
-<div style="text-align: center;"><h1>Visited places</h1></div>
-<hr>
-<table border="1" width="100%">
-    <tr>
-        <th><a href="../image/CityPalaceUdaipur.jpg" target="_blank">Udaipur</a></th>
-        <th><a href="../image/JaisalmerFort.jpg" target="_blank">Jaisalmer</a></th>
-        <th><a href="../image/AtalPedestrianBridge.jpg" target="_blank">Ahmedabad</a></th>
-        <th><a href="../image/BasilicaofBomJesus.jpg" target="_blank">Goa</a></th>
-        <th><a href="../image/KamakhyaTemple,Guwahati.jpg" target="_blank">Assam</a></th>
-    </tr>
-        </table>
-        <blockquote><table border="1" width="80%" height="300px">
+<body>
+    <div style="text-align: center">;<h3>Welcome To My Page</h3>
+    </div>
+    <img src="../image/MyPage.JPG" alt="This is Solar System" width="100%">
+
+    <table border="1" width="50%">
+        <tr>
+            <th><a href="https://hse-rm.com/index.html" target="_blank">HOME</a></th>
+            <th><a href="https://hse-rm.com/about.html" target="_blank">About Us</a></th>
+            <th><a href="https://hse-rm.com/services.html" target="_blank">Services</a></th>
+            <th><a href="https://hse-rm.com/products.html" target="_blank">Innovation</a></th>
+            <th><a href="https://hse-rm.com/contact.html" target="_blank">Contact Us</a></th>
+        </tr>
+    </table>
+    <hr>
+    <div style="text-align: center;">
+        <h1>Visited places</h1>
+    </div>
+    <hr>
+    <table border="1" width="100%">
+        <tr>
+            <th><a href="../image/CityPalaceUdaipur.jpg" target="_blank">Udaipur</a></th>
+            <th><a href="../image/JaisalmerFort.jpg" target="_blank">Jaisalmer</a></th>
+            <th><a href="../image/AtalPedestrianBridge.jpg" target="_blank">Ahmedabad</a></th>
+            <th><a href="../image/BasilicaofBomJesus.jpg" target="_blank">Goa</a></th>
+            <th><a href="../image/KamakhyaTemple,Guwahati.jpg" target="_blank">Assam</a></th>
+        </tr>
+    </table>
+    <blockquote>
+        <table border="1" width="80%" height="300px">
             <tr>
                 <th>Famous Place</th>
                 <th>Details of Place</th>
@@ -38,32 +44,35 @@
                 <th>Capital</th>
             </tr>
             <tr>
-                <td rowspan="2"><img src="../image/AmaravatiStupa.jpg" width="100px">Amaravati Stupa</td>
-                <td>Amarāvati Stupa is a ruined Buddhist stūpa 
-        </td>
-                <td>Andhra Pradesh
-        </td>
-                <td>Amaravati</td>
+                <td rowspan="2"><img src="../image/AmaravatiStupa.jpg" width="100px">
+                    <br>Amaravati Stupa
+                </td>
+                <td>Amarāvati Stupa is a ruined Buddhist stūpa
+                </td>
+                <td rowspan="2">Andhra Pradesh
+                </td>
+                <td rowspan="2">Amaravati</td>
             </tr>
             <tr>
-                <td>at Palnadu district, Andhra Pradesh</td>
-                <td>Data 2.3</td>
-                <td>Data 2.4</td>
+                <td>At Palnadu district, Andhra Pradesh</td>
+
             </tr>
             <tr>
-                <td rowspan="2"><img src="../image/Ita Fort.jpg" width="100px">Ita Fort</td>
+                <td rowspan="2"><img src="../image/Ita Fort.jpg" width="100px">
+                    <br>Ita Fort
+                </td>
                 <td>A historical fort built in the 14th-15th century </td>
-                <td>Arunachal Pradesh</td>
-                <td>Itanagar</td>
+                <td rowspan="2">Arunachal Pradesh</td>
+                <td rowspan="2">Itanagar</td>
             </tr>
             <tr>
-                <td>with an impressive stone structure</td>
-                <td>Data 4.3</td>
-                <td>Data 4.4</td>
+                <td>In Itanagar With an impressive stone structure</td>
+
             </tr>
-        </table>  
-        </blockquote>
-        
+        </table>
+    </blockquote>
+
 
 </body>
+
 </html>
