--- a/PRACTICE/07SolarProject.html
+++ b/PRACTICE/07SolarProject.html
@@ -7,6 +7,51 @@
 </head>
 <body>
     <h1 style="text-align: center;">The Solar System</h1>
+    <hr>
+    <table>
+        <tr>
+            <th>
+                <ul type="square">
+                    <li><a href="../task/05TaskofTheDayPlanets.html" target="_blank">HOME</a></li>
+                </ul>
+            </th>
+            <th>
+                <ul type="square">
+                    <li><a href="../html/10AnchorImage.html" target="_blank">ABOUT US</a></li>
+                </ul>
+            </th>
+            <th>
+                <ul type="square">
+                    <li><a href="../html/11ImageMap.html" target="_blank">SERVICES</a></li>
+                </ul>
+            </th>
+            <th>
+                <ul type="square">
+                    <li><a href="../task/02SelfIntroduction.html" target="_blank">CONTACT US</a></li>
+                </ul>
+            </th>
+        </tr>
+
+    </table>
+    <hr>
+    <div style="text-align: center;">
+        <section>
+            <h3>Section Title Planet Mercury</h3>
+            <p>This paragraph inside a section</p>
+            <video width="320" height="240" controls>
+                <source src="../image/mercury.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </section>
+        <section>
+            <h3>Section Title Planet Venus</h3>
+            <p>This paragraph inside a section</p>
+            <video width="320" height="240" controls>
+                <source src="../image/venus.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </section>
+    </div>
 <hr>
     <div style="text-align: center;">
         <table border="1" width="80%" align="center">
@@ -57,6 +102,7 @@
             </tr>
         </table>
     </div>
+
 <hr>
     <footer style="text-align: center;">
         &copy; 2024 Solar System Exploration
