--- a/PRACTICE/Test.html
+++ b/PRACTICE/Test.html
@@ -1,52 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form Tag</title>
-  </head>
-  <body>
-    <h1>Introduction To Form</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to My Learning</title>
+</head>
+<body>
 
-    <hr />
-    <!-- action => path backend  -->
+    <!-- Header -->
+    <h1>Welcome to My Learning</h1>
 
-    <!-- method => -->
+    <!-- Login Form -->
+    <h2>Login</h2>
+    <form action="/login" method="post">
+        <label for="userType">Select User Type:</label>
+        <select id="userType" name="userType">
+            <option value="student">Student Login</option>
+            <option value="teacher">Teacher Login</option>
+            <option value="corporate">Corporate Company Login</option>
+        </select>
+        <br><br>
+        <label for="userId">User ID:</label>
+        <input type="text" id="userId" name="userId">
+        <br><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password">
+        <br><br>
+        <input type="submit" value="Submit">
+    </form>
+    <p>If not, then <a href="/register">register yourself</a>.</p>
 
-    <!-- get  -->
-    <!-- => it is not secure  -->
-    <!-- => it shows data in the url  -->
-    <!-- => easily bookmark -->
-    <!-- => limitation 2048 charcter  -->
+    <hr>
 
-    <!-- post -->
+    <!-- Courses We Offer -->
+    <h2>Courses We Offer</h2>
+    <table border="1">
+        <tr>
+            <th>Course Type</th>
+            <th>Course Name</th>
+            <th>Cost</th>
+            <th>Discount</th>
+        </tr>
+        <tr>
+            <td>Paid</td>
+            <td>Advanced Safety Training</td>
+            <td>$200</td>
+            <td>10%</td>
+        </tr>
+        <tr>
+            <td>Paid</td>
+            <td>Process Safety Management</td>
+            <td>$250</td>
+            <td>15%</td>
+        </tr>
+        <tr>
+            <td>Demo</td>
+            <td>Basic Fire Safety</td>
+            <td>$0</td>
+            <td>N/A</td>
+        </tr>
+        <tr>
+            <td>Demo</td>
+            <td>Introduction to HSE</td>
+            <td>$0</td>
+            <td>N/A</td>
+        </tr>
+    </table>
 
-    <!-- => secure-->
-    <!-- => not bookmark-->
-    <!-- => never shows data in url-->
-    <!-- => no limitation -->
-    <!-- => file supported -->
+    <!-- Footer Information -->
+    <h2>About Us</h2>
+    <p>We are dedicated to providing top-notch safety and HSE training for various industries...</p>
+    <h2>Contact Page</h2>
+    <p>You can reach us at contact@example.com or call us at (123) 456-7890...</p>
+    <h2>Blog</h2>
+    <p>Visit our <a href="/blog">Blog</a> for the latest updates and articles...</p>
+    <h2>Privacy Policy</h2>
+    <p>Read our <a href="/privacy">Privacy Policy</a> to understand how we handle your data...</p>
+    <h2>Refund Policy</h2>
+    <p>Check our <a href="/refund">Refund Policy</a> for information on returns and refunds...</p>
 
-    <!-- enctype -->
+    <!-- Certificate Search -->
+    <h2>Search Certificate</h2>
+    <form action="/search-certificate" method="get">
+        <label for="certificateNumber">Certificate Number:</label>
+        <input type="text" id="certificateNumber" name="certificateNumber">
+        <br><br>
+        <input type="submit" value="Search">
+    </form>
 
-    <!-- => application/x-www-form-urlencoded => Default  -->
-    <!-- => multipart/form-data => when method is post  -->
-    <!-- => text/plain => for debugging purpose -->
-
-
-
-    <fieldset>
-      <legend>Form Tag</legend>
-      <!-- <form action="" method="get" enctype=""> -->
-        <form action="" method="post" enctype="multipart/form-data">
-        <label for="fname">First Name</label>
-        <input type="text" name="fname" id="fname" placeholder="first name" required/>
-        <br /><br />
-        <label for="pass">Password</label>
-        <input type="password" name="pass" id="pass" placeholder="last name" />
-        <br /><br />
-        <button>Submit</button>
-      </form>
-    </fieldset>
-  </body>
+</body>
 </html>
