--- a/PRACTICE/10FormPost.html
+++ b/PRACTICE/10FormPost.html
@@ -11,7 +11,7 @@
     <h1>Example of POST Form</h1>
     <!--(e.g., creating or updating a record)-->
     <form action="/submit-form" method="post">
-        <label for="name">Name</label>
+        <label for="name" placeholder="Name">Name</label>
         <input type="text" id="name" name="name" required>
         <label for="email">Email</label>
         <input type="email" id="email" name="email" required>
