--- a/TASK/02SelfIntroduction.html
+++ b/TASK/02SelfIntroduction.html
@@ -9,7 +9,7 @@
 
 <body>
     <marquee behavior="" direction="">
-        <h4>Self Introduction</h4>
+        <h2>Self Introduction</h2>
     </marquee>
     <hr>
     <div Style="text-align:center">
@@ -18,13 +18,22 @@
     <hr>
     <p>I am an innovative thinker, able to apply analysis and creativityto problem-solving.</p>
     <h3>Qualification</h3>
-
     BSC Fire <br>
     Dip.Mech.Eng. <br>
     NEBOSH International Certification (Distinction) <br>
     Perusing Full Stack (MERM Developer)
-
     <!--Problem how to make this text align normal?-->
+    <hr>
+    <div Style="text-align:center">
+        <h2>Contact Me</h2>
+        <p>If you would like to get in touch, feel free to<br>
+            <abbr title="piyush.r.tripathi@gmail.com"><h2>&gt;EMAIL ME&lt;</h2><br>
+            piyush.r.tripathi@gmail.com</abbr>.
+        </p>
+    </div>
+    <div Style="text-align:center">
+        <p> &gt;<b>Copyright 2024</b> <i>Piyush Tripathi. All Rights Reserved.</i>&lt;</p>
+    </div>
 
 
 </body>
