--- a/PRACTICE/Test.html
+++ b/PRACTICE/Test.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>INDEX</title>
 </head>
+
 <body>
-    
+    <table border="0" width="100%" height="100px">
+        <tr>
+            <th><img src="../image/LOGO.jpg" height="50px"></th>
+            <th width="40%"></th>
+            <th width="10%"><a href="../task/02SelfIntroduction.html" target="ContentFrame">HOME</a></th>
+            <th width="10%"><a href="../html" target="ContentFrame">PRACTICE</a></th>
+            <th width="10%"><a href="../task">TASK</a></th>
+            <th width="10%"><a href="../PROJECT">PROJECT</a></th>
+            <th width="10%"><a href="../practice/Test.html">CONTACT</a></th>
+        </tr>
+    </table>
+    <hr>
+
+    <table border="1" width="100%" height="100%">
+        <tr>
+            <th width="20%">
+<h2>INDEX</h2>
+<ul>
+    <li><a href="../task/02SelfIntroduction.html" target="ContentFrame">HOME</a></li>
+    <li>PRACTICE
+        <ul>
+            <li><a href="../practice/01HTMLBasic.html" target="ContentFrame">HTML Basic</a></li>
+            <li><a href="../practice/02HTMLFormating.html" target="ContentFrame">HTML Formating</a></li>
+            <li><a href="../practice/03ListPathImage.html" target="ContentFrame">List Path Image</a></li>
+            <li><a href="../practice/04PracticeTables.html" target="ContentFrame">Tables</a></li>
+            <li><a href="../practice/05HomeProject.html" target="ContentFrame">First Home Project</a></li>
+            <li><a href="../practice/06WEBPROJECT.HTML" target="ContentFrame">Web Project01</a></li>
+        </ul>
+    </li>
+</ul>
+                   </th>
+            <th width="80%">
+                <iframe name="ContentFrame" width="100%" height="500px"></iframe>
+            </th>
+        </tr>
+
+    </table>
+
 </body>
+
 </html>
