--- a/MyTutorials/Index.html
+++ b/MyTutorials/Index.html
@@ -13,41 +13,69 @@
             <th><img src="../image/LOGO.jpg" height="50px"></th>
             <th width="40%"></th>
             <th width="10%"><a href="../mytutorials/Index.html" target="ContentFrame">HOME</a></th>
-            <th width="20%"><details>
-                <summary>PRACTICE</summary>
-                <ul style="text-align: left">
-                    <li><a href="../practice/01HTMLBasic.html" target="ContentFrame">HTML Basic</a></li>
-                    <li><a href="../practice/02HTMLFormating.html" target="ContentFrame">HTML
-                            Formating</a></li>
-                    <li><a href="../practice/03ListPathImage.html" target="ContentFrame">List Path
-                            Image</a></li>
-                    <li><a href="../practice/04PracticeTables.html" target="ContentFrame">Tables</a>
-                    </li>
-                    <li><a href="../practice/05HomeProject.html" target="ContentFrame">First Home
-                            Project</a></li>
-                    <li><a href="../practice/06WEBPROJECT.HTML" target="ContentFrame">Web Project01</a>
-                    </li>
-                </ul>
-            </details></th>
-            <th width="10%"><a href="../task" target="ContentFrame">TASK</a></th>
-            <th width="10%"><a href="../PROJECT" target="ContentFrame">PROJECT</a></th>
+            <th width="20%">
+                <details>
+                    <summary>PRACTICE</summary>
+                    <ul style="text-align: left">
+                        <li><a href="../practice/01HTMLBasic.html" target="ContentFrame">HTML Basic</a></li>
+                        <li><a href="../practice/02HTMLFormating.html" target="ContentFrame">HTML
+                                Formating</a></li>
+                        <li><a href="../practice/03ListPathImage.html" target="ContentFrame">List Path
+                                Image</a></li>
+                        <li><a href="../practice/04PracticeTables.html" target="ContentFrame">Tables</a>
+                        </li>
+                        <li><a href="../practice/05HomeProject.html" target="ContentFrame">First Home
+                                Project</a></li>
+                        <li><a href="../practice/06WEBPROJECT.HTML" target="ContentFrame">Web Project01</a>
+                        </li>
+                    </ul>
+                </details>
+            </th>
+            <th width="10%">
+                <details>
+                    <summary>TASK</summary>
+                    <ul style="text-align: left">
+                        <li><a href="../TASK/01Definitions.html" target="ContentFrame">Definitions</a></li>
+                        <li><a href="../TASK/02SelfIntroduction.html" target="ContentFrame">Self
+                                Introduction</a></li>
+                        <li><a href="../TASK/03TypeOfListTask.html" target="ContentFrame">Type Of List</a>
+                        </li>
+                        <li><a href="../TASK/04TaskoftheDayStateandCapital.html" target="ContentFrame">State
+                                & Capital</a>
+                        </li>
+                        <li><a href="../TASK/05TaskofTheDayPlanets.html" target="ContentFrame">Planets</a>
+                        </li>
+                        <li><a href="../TASK/06TableMergingTask.html" target="ContentFrame">Table
+                                Merging</a>
+                        </li>
+                    </ul>
+                </details>
+            </th>
+            <th width="10%">
+                <details>
+                    <summary>PROJECT</summary>
+                    <ul style="text-align: left">
+                        <li><a href="../PROJECT/01PROJECT.html" target="ContentFrame">01 Project</a></li>
+                    </ul>
+                </details>
+            </th>
             <th width="10%"><a href="../TASK/02SelfIntroduction.html" target="ContentFrame">CONTACT</a></th>
         </tr>
     </table>
     <hr>
 
-    <table border="1" width="100%" height="100%">
+    <table border="0" width="100%" height="100%">
         <tr>
             <th width="20%">
-                <table border="1" width="100%" Height="100%">
+                <table border="0" width="100%" Height="100%">
                     <tr>
-                        <th>INDEX</th>
+                        <th height="10%">INDEX</th>
                     </tr>
                     <tr>
-                        <th><a href="../mytutorials/Index.html" target="ContentFrame">HOME</a></th>
+                        <th height="10%"><a href="../mytutorials/Index.html" target="ContentFrame">HOME</a></th>
                     </tr>
                     <tr>
-                        <th style="text-align: center">
+                        <th style="text-align: center" height="30%">
                             <details>
                                 <summary>PRACTICE</summary>
                                 <ul style="text-align: left">
@@ -67,26 +95,36 @@
                         </th>
                     </tr>
                     <tr>
-                        <th><details>
-                            <summary>TASK</summary>
-                            <ul style="text-align: left">
-                                <li><a href="../TASK/01Definitions.html" target="ContentFrame">Definitions</a></li>
-                                <li><a href="../TASK/02SelfIntroduction.html" target="ContentFrame">Self Introduction</a></li>
-                                <li><a href="../TASK/03TypeOfListTask.html" target="ContentFrame">Type Of List</a></li>
-                                <li><a href="../TASK/04TaskoftheDayStateandCapital.html" target="ContentFrame">State & Capital</a>
-                                </li>
-                                <li><a href="../TASK/05TaskofTheDayPlanets.html" target="ContentFrame">Planets</a></li>
-                                <li><a href="../TASK/06TableMergingTask.html" target="ContentFrame">Table Merging</a>
-                                </li>
-                            </ul>
-                        </details></th>
+                        <th height="30%">
+                            <details>
+                                <summary>TASK</summary>
+                                <ul style="text-align: left">
+                                    <li><a href="../TASK/01Definitions.html" target="ContentFrame">Definitions</a></li>
+                                    <li><a href="../TASK/02SelfIntroduction.html" target="ContentFrame">Self
+                                            Introduction</a></li>
+                                    <li><a href="../TASK/03TypeOfListTask.html" target="ContentFrame">Type Of List</a>
+                                    </li>
+                                    <li><a href="../TASK/04TaskoftheDayStateandCapital.html" target="ContentFrame">State
+                                            & Capital</a>
+                                    </li>
+                                    <li><a href="../TASK/05TaskofTheDayPlanets.html" target="ContentFrame">Planets</a>
+                                    </li>
+                                    <li><a href="../TASK/06TableMergingTask.html" target="ContentFrame">Table
+                                            Merging</a>
+                                    </li>
+                                </ul>
+                            </details>
+                        </th>
                     </tr>
                     <tr>
-                        <th><summary>TASK</summary>
-                            <ul style="text-align: left">
-                                <li><a href="../PROJECT/01PROJECT.html" target="ContentFrame">01 Project</a></li>
-                            </ul>
-                        </details></th>
+                        <th height="20%">
+                            <details>
+                                <summary>PROJECT</summary>
+                                <ul style="text-align: left">
+                                    <li><a href="../PROJECT/01PROJECT.html" target="ContentFrame">01 Project</a></li>
+                                </ul>
+                            </details>
+                        </th>
                     </tr>
                     <tr>
                         <th><a href="../TASK/02SelfIntroduction.html" target="ContentFrame">CONTACT</a></th>
