--- a/MyTutorials/Index.html
+++ b/MyTutorials/Index.html
@@ -137,7 +137,17 @@
             </th>
         </tr>
     </table>
-
+<hr>
+<div Style="text-align:center">
+        <h2>Contact Me</h2>
+        <p>If you would like to get in touch, feel free to<br>
+            <abbr title="piyush.r.tripathi@gmail.com"><h2>&gt;EMAIL ME&lt;</h2><br>
+            piyush.r.tripathi@gmail.com</abbr>.
+        </p>
+    </div>
+    <div Style="text-align:center">
+        <p> &gt;<b>Copyright 2024</b> <i>Piyush Tripathi. All Rights Reserved.</i>&lt;</p>
+    </div>
 </body>
 
 </html>
