--- a/TASK/02SelfIntroduction.html
+++ b/TASK/02SelfIntroduction.html
@@ -21,7 +21,7 @@
     BSC Fire <br>
     Dip.Mech.Eng. <br>
     NEBOSH International Certification (Distinction) <br>
-    Perusing Full Stack (MERM Developer)
+    Perusing Full Stack (MERN Developer)
     <!--Problem how to make this text align normal?-->
     <hr>
     <div Style="text-align:center">
