--- a/MyTutorials/Index.html
+++ b/MyTutorials/Index.html
@@ -8,74 +8,80 @@
 </head>
 
 <body>
-    <table border="0" width="100%" height="100px">
-        <tr>
-            <th><img src="../image/LOGO.jpg" height="50px"></th>
-            <th width="40%"></th>
-            <th width="10%"><a href="../mytutorials/Index.html" target="ContentFrame">HOME</a></th>
-            <th width="20%">
-                <details>
-                    <summary>PRACTICE</summary>
-                    <ul style="text-align: left">
-                        <li><a href="../practice/01HTMLBasic.html" target="ContentFrame">HTML Basic</a></li>
-                        <li><a href="../practice/02HTMLFormating.html" target="ContentFrame">HTML
-                                Formating</a></li>
-                        <li><a href="../practice/03ListPathImage.html" target="ContentFrame">List Path
-                                Image</a></li>
-                        <li><a href="../practice/04PracticeTables.html" target="ContentFrame">Tables</a>
-                        </li>
-                        <li><a href="../practice/05HomeProject.html" target="ContentFrame">First Home
-                                Project</a></li>
-                        <li><a href="../practice/06WEBPROJECT.HTML" target="ContentFrame">Web Project01</a>
-                        </li>
-                    </ul>
-                </details>
-            </th>
-            <th width="10%">
-                <details>
-                    <summary>TASK</summary>
-                    <ul style="text-align: left">
-                        <li><a href="../TASK/01Definitions.html" target="ContentFrame">Definitions</a></li>
-                        <li><a href="../TASK/02SelfIntroduction.html" target="ContentFrame">Self
-                                Introduction</a></li>
-                        <li><a href="../TASK/03TypeOfListTask.html" target="ContentFrame">Type Of List</a>
-                        </li>
-                        <li><a href="../TASK/04TaskoftheDayStateandCapital.html" target="ContentFrame">State
-                                & Capital</a>
-                        </li>
-                        <li><a href="../TASK/05TaskofTheDayPlanets.html" target="ContentFrame">Planets</a>
-                        </li>
-                        <li><a href="../TASK/06TableMergingTask.html" target="ContentFrame">Table
-                                Merging</a>
-                        </li>
-                    </ul>
-                </details>
-            </th>
-            <th width="10%">
-                <details>
-                    <summary>PROJECT</summary>
-                    <ul style="text-align: left">
-                        <li><a href="../PROJECT/01PROJECT.html" target="ContentFrame">01 Project</a></li>
-                    </ul>
-                </details>
-            </th>
-            <th width="10%"><a href="../TASK/02SelfIntroduction.html" target="ContentFrame">CONTACT</a></th>
-        </tr>
-    </table>
+    <header>
+        <table border="0" width="100%" height="100px">
+            <tr>
+                <th><img src="../image/LOGO.jpg" height="50px"></th>
+                <th width="40%"></th>
+                <th width="10%" bgcolor="lightblue"><a href="../video/WelcomeToMyChannel.mp4"
+                        target="ContentFrame">HOME</a>
+                </th>
+                <th width="20%" bgcolor="yellow">
+                    <details>
+                        <summary>PRACTICE</summary>
+                        <ul style="text-align: left">
+                            <li><a href="../practice/01HTMLBasic.html" target="ContentFrame">HTML Basic</a></li>
+                            <li><a href="../practice/02HTMLFormating.html" target="ContentFrame">HTML
+                                    Formating</a></li>
+                            <li><a href="../practice/03ListPathImage.html" target="ContentFrame">List Path
+                                    Image</a></li>
+                            <li><a href="../practice/04PracticeTables.html" target="ContentFrame">Tables</a>
+                            </li>
+                            <li><a href="../practice/05HomeProject.html" target="ContentFrame">First Home
+                                    Project</a></li>
+                            <li><a href="../practice/06WEBPROJECT.HTML" target="ContentFrame">Web Project01</a>
+                            </li>
+                        </ul>
+                    </details>
+                </th>
+                <th width="10%" bgcolor="red">
+                    <details>
+                        <summary>TASK</summary>
+                        <ul style="text-align: left">
+                            <li><a href="../TASK/01Definitions.html" target="ContentFrame">Definitions</a></li>
+                            <li><a href="../TASK/02SelfIntroduction.html" target="ContentFrame">Self
+                                    Introduction</a></li>
+                            <li><a href="../TASK/03TypeOfListTask.html" target="ContentFrame">Type Of List</a>
+                            </li>
+                            <li><a href="../TASK/04TaskoftheDayStateandCapital.html" target="ContentFrame">State
+                                    & Capital</a>
+                            </li>
+                            <li><a href="../TASK/05TaskofTheDayPlanets.html" target="ContentFrame">Planets</a>
+                            </li>
+                            <li><a href="../TASK/06TableMergingTask.html" target="ContentFrame">Table
+                                    Merging</a>
+                            </li>
+                        </ul>
+                    </details>
+                </th>
+                <th width="10%" bgcolor="orange">
+                    <details>
+                        <summary>PROJECT</summary>
+                        <ul style="text-align: left">
+                            <li><a href="../PROJECT/01PROJECT.html" target="ContentFrame">01 Project</a></li>
+                        </ul>
+                    </details>
+                </th>
+                <th width="10%" bgcolor="lightblue"><a href="../TASK/02SelfIntroduction.html"
+                        target="ContentFrame">CONTACT</a></th>
+            </tr>
+        </table>
+    </header>
     <hr>
 
     <table border="0" width="100%" height="100%">
         <tr>
-            <th width="20%">
+            <th width="20%" bgcolor="lightgray">
                 <table border="0" width="100%" Height="100%">
                     <tr>
                         <th height="10%">INDEX</th>
                     </tr>
                     <tr>
-                        <th height="10%"><a href="../mytutorials/Index.html" target="ContentFrame">HOME</a></th>
+                        <th height="10%" bgcolor="lightblue"><a href="../video/WelcomeToMyChannel.mp4"
+                                target="ContentFrame">HOME</a></th>
                     </tr>
                     <tr>
-                        <th style="text-align: center" height="30%">
+                        <th style="text-align: center" height="30%" bgcolor="yellow">
                             <details>
                                 <summary>PRACTICE</summary>
                                 <ul style="text-align: left">
@@ -95,7 +101,7 @@
                         </th>
                     </tr>
                     <tr>
-                        <th height="30%">
+                        <th height="30%" bgcolor="red">
                             <details>
                                 <summary>TASK</summary>
                                 <ul style="text-align: left">
@@ -117,7 +123,7 @@
                         </th>
                     </tr>
                     <tr>
-                        <th height="20%">
+                        <th height="20%" bgcolor="orange">
                             <details>
                                 <summary>PROJECT</summary>
                                 <ul style="text-align: left">
@@ -127,7 +133,8 @@
                         </th>
                     </tr>
                     <tr>
-                        <th><a href="../TASK/02SelfIntroduction.html" target="ContentFrame">CONTACT</a></th>
+                        <th bgcolor="lightblue"><a href="../TASK/02SelfIntroduction.html"
+                                target="ContentFrame">CONTACT</a></th>
                     </tr>
 
                 </table>
@@ -137,17 +144,21 @@
             </th>
         </tr>
     </table>
-<hr>
-<div Style="text-align:center">
-        <h2>Contact Me</h2>
-        <p>If you would like to get in touch, feel free to<br>
-            <abbr title="piyush.r.tripathi@gmail.com"><h2>&gt;EMAIL ME&lt;</h2><br>
-            piyush.r.tripathi@gmail.com</abbr>.
-        </p>
-    </div>
-    <div Style="text-align:center">
-        <p> &gt;<b>Copyright 2024</b> <i>Piyush Tripathi. All Rights Reserved.</i>&lt;</p>
-    </div>
+    <hr>
+    <footer bgcolor="lightgray">
+        <div Style="text-align:center">
+            <h2>Contact Me</h2>
+            <p>If you would like to get in touch, feel free to<br>
+                <abbr title="piyush.r.tripathi@gmail.com">
+                    <h2>&gt;EMAIL ME&lt;</h2><br>
+                    piyush.r.tripathi@gmail.com
+                </abbr>.
+            </p>
+        </div>
+        <div Style="text-align:center">
+            <p> &gt;<b>Copyright 2024</b> <i>Piyush Tripathi. All Rights Reserved.</i>&lt;</p>
+        </div>
+    </footer>
 </body>
 
 </html>
