--- a/PRACTICE/12ProjectWebPage01.html
+++ b/PRACTICE/12ProjectWebPage01.html
@@ -10,10 +10,10 @@
 <body>
     <table border="0" width="100%" height="100px">
         <tr>
-            <th><img src="../image/LOGO.jpg" height="50px"></th>
-            <th width="40%"></th>
-            <th width="10%"><a href="../mytutorials/Index.html" target="ContentFrame">HOME</a></th>
-            <th width="20%">
+            <th><img src="../image/LOGO.jpg" height="90px"></th>
+            <th width="20%"></th>
+            <th width="10%"><a href="../video/WelcomeToMyChannel.mp4" target="ContentFrame">HOME</a></th>
+            <th width="30%">
                 <details>
                     <summary>PRACTICE</summary>
                     <ul style="text-align: left">
@@ -31,7 +31,7 @@
                     </ul>
                 </details>
             </th>
-            <th width="10%">
+            <th width="30%">
                 <details>
                     <summary>TASK</summary>
                     <ul style="text-align: left">
@@ -68,7 +68,7 @@
         <tr>
             <th width="20%" bgcolor="Gray">
                 <h3 bgcolor="red">INDEX</h3>
-                <h3><a href="../mytutorials/Index.html" target="ContentFrame">HOME</a></h3>
+                <h3><a href="../video/WelcomeToMyChannel.mp4" target="ContentFrame">HOME</a></h3>
                 
                 <h3 bgcolor="red">PRACTICE</h3>
                 <p><a href="../practice/01HTMLBasic.html" target="ContentFrame">HTML Basic</a></p>
